# picocross

./: .gitignore  LICENSE  README.rst  pyproject.toml  tox.ini
docs/: conf.py  index.rst
docs/api/: modules.rst  picocross.rst
picocross/: cli.py  profiles.py  states.py  transitions.py
tests/: test_picocross.py  test_profiles.py  test_states.py  test_transitions.py
