[tool.poetry]
name = "picocross"
version = "0.1.0"
description = ""
authors = ["Ahmed <ahmed.al-refaie.12@ucl.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.18,<1.23"
numba = "^0.55.2"
astropy = "^5.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
