[tool.poetry]
name = "picocross"
version = "0.1.0"
description = ""
authors = ["Ahmed <ahmed.al-refaie.12@ucl.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.18,<1.23"
numba = "^0.55.2"
astropy = "^5.1"
pandas = "^1.4.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
pytest = "^7.1.2"
Sphinx = "^5.0.2"
furo = "^2022.6.21"
sphinx-autobuild = "^2021.3.14"
tox = "^3.25.0"
pre-commit = "^2.19.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
